--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         let dx = 2;
         let dy = -2;
 
+        var ballRadius = 10;
+
         function drawBall() {
             ctx.beginPath();
-            ctx.arc(x, y, 10, 0, Math.PI*2);
+            ctx.arc(x, y, ballRadius, 0, Math.PI*2);
             ctx.fillStyle = "#0095DD";
             ctx.fill();
             ctx.closePath();
@@ -33,6 +35,15 @@
             // drawing code
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawBall();
+
+            if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+                dx = -dx;
+            }
+            if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
+                dy = -dy;
+            }
+
+
             x += dx;
             y += dy;
         }
