--- a/index.html
+++ b/index.html
@@ -76,8 +76,17 @@
             if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
                 dx = -dx;
             }
-            if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
+            if(y + dy < ballRadius) {
                 dy = -dy;
+            } else if(y + dy > canvas.height-ballRadius) {
+                if(x > paddleX && x < paddleX + paddleWidth) {
+                    dy = -dy;
+                }
+                else {
+                    alert("GAME OVER");
+                    document.location.reload();
+                    clearInterval(interval);
+                }
             }
 
             if(rightPressed) {
@@ -93,11 +102,10 @@
                 }
             }
 
-
             x += dx;
             y += dy;
         }
-        setInterval(draw, 10);
+        var interval = setInterval(draw, 10);
     </script>
 
 </body>
