--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         var brickOffsetTop = 30;
         var brickOffsetLeft = 30;
 
+        var score = 0;
+
         var bricks = [];
         for(var c=0; c<brickColumnCount; c++) {
             bricks[c] = [];
@@ -75,10 +77,22 @@
                         if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
                             dy = -dy;
                             b.status = 0;
+                            score++;
+                            if(score == brickRowCount*brickColumnCount) {
+                                alert("YOU WIN, CONGRATULATIONS!");
+                                document.location.reload();
+                                clearInterval(interval); // Needed for Chrome to end game
+                            }
                         }
                     }
                 }
             }
+        }
+
+        function drawScore() {
+            ctx.font = "16px Arial";
+            ctx.fillStyle = "#0095DD";
+            ctx.fillText("Score: "+score, 8, 20);
         }
 
         function drawBall() {
@@ -115,7 +129,6 @@
             }
         }
 
-
         function draw() {
             // drawing code
             ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -123,6 +136,7 @@
             drawPaddle();
             drawBricks();
             collisionDetection();
+            drawScore();
 
             if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
                 dx = -dx;
@@ -158,6 +172,5 @@
         }
         var interval = setInterval(draw, 10);
     </script>
-
 </body>
 </html>
