--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         var brickOffsetLeft = 30;
 
         var score = 0;
+        var lives = 3;
 
         var bricks = [];
         for(var c=0; c<brickColumnCount; c++) {
@@ -89,7 +90,6 @@
                             if(score == brickRowCount*brickColumnCount) {
                                 alert("YOU WIN, CONGRATULATIONS!");
                                 document.location.reload();
-                                clearInterval(interval); // Needed for Chrome to end game
                             }
                         }
                     }
@@ -101,6 +101,12 @@
             ctx.font = "16px Arial";
             ctx.fillStyle = "#0095DD";
             ctx.fillText("Score: "+score, 8, 20);
+        }
+
+        function drawLives() {
+            ctx.font = "16px Arial";
+            ctx.fillStyle = "#0095DD";
+            ctx.fillText("Lives: "+lives, canvas.width-65, 20);
         }
 
         function drawBall() {
@@ -145,6 +151,7 @@
             drawBricks();
             collisionDetection();
             drawScore();
+            drawLives();
 
             if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
                 dx = -dx;
@@ -156,9 +163,18 @@
                     dy = -dy;
                 }
                 else {
-                    alert("GAME OVER");
-                    document.location.reload();
-                    clearInterval(interval);
+                    lives--;
+                    if(!lives) {
+                        alert("GAME OVER");
+                        document.location.reload();
+                    }
+                    else {
+                        x = canvas.width/2;
+                        y = canvas.height-30;
+                        dx = 2;
+                        dy = -2;
+                        paddleX = (canvas.width-paddleWidth)/2;
+                    }
                 }
             }
 
@@ -177,8 +193,9 @@
 
             x += dx;
             y += dy;
+            requestAnimationFrame(draw);
         }
-        var interval = setInterval(draw, 10);
+        draw();
     </script>
 </body>
 </html>
