Add aa Start button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
 
+        ctx.beginPath();
+        ctx.rect(canvas.width/3, canvas.height/3, 100, 40);
+        ctx.strokeStyle = "rgba(0, 0, 255, 0.5)";
+        ctx.stroke();
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("START", canvas.width/3+24, canvas.height/3+26);
+        ctx.closePath();
+
         let x = canvas.width/2;
         let y = canvas.height-30;
         let dx = 2;
@@ -52,6 +61,7 @@
         document.addEventListener("keydown", keyDownHandler, false);
         document.addEventListener("keyup", keyUpHandler, false);
         document.addEventListener("mousemove", mouseMoveHandler, false);
+        document.addEventListener('click', clickHandler, false);
 
         function keyDownHandler(e) {
             if(e.key == "Right" || e.key == "ArrowRight") {
@@ -76,6 +86,11 @@
             if(relativeX > 0 && relativeX < canvas.width) {
                 paddleX = relativeX - paddleWidth/2;
             }
+        }
+
+        function clickHandler(e) {
+           document.removeEventListener('click', clickHandler, false);
+           draw();
         }
 
         function collisionDetection() {
@@ -195,7 +210,6 @@
             y += dy;
             requestAnimationFrame(draw);
         }
-        draw();
     </script>
 </body>
 </html>
